# gatran-python

./: README.md  pyproject.toml  setup.cfg
examples/chess/: chess_action.py  chess_state.py  evaluator.py  main.py
examples/tictactoe/: evaluator.py  main.py  tictactoe_action.py  tictactoe_state.py
gatran/: action.py  agent.py  game.py  node.py  state.py
gatran/algorithms/: negamax.py  negascout.py
gatran/tree/: negamax_node.py  node.py
