[metadata]
name = gatran
version = 0.0.1
author = Dmitrii Fomin
author_email = fomin.dm@gmail.com
description = Game tree analyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfomin/gatran-python
project_urls =
    Bug Tracker = https://github.com/dfomin/gatran-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gatran
packages = find:
python_requires = >=3.12

[options.packages.find]
where = gatran
